# AuraMarket

./: .gitignore  Cargo.toml  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
.github/workflows/: ci.yml
contracts/marketplace/: Cargo.toml  nft.wasm
contracts/marketplace/src/: lib.rs  nft.wasm  test.rs
contracts/marketplace/test_snapshots/test/tests/: test_delist.1.json  test_full_marketplace_flow.1.json
contracts/nft/: Cargo.toml
contracts/nft/src/: lib.rs
contracts/nft/test_snapshots/tests/: test_mint_and_get.1.json  test_transfer.1.json
frontend/: .env.example  next.config.js  vercel.json
frontend/.next/cache/webpack/client-development/: 13.pack.gz_  9.pack.gz_
frontend/.next/cache/webpack/server-development/: 3.pack.gz_
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: EventFeed.tsx  MintForm.tsx  NFTCard.tsx  Navbar.tsx
frontend/src/hooks/: useContract.ts  useScrollReveal.ts  useWallet.ts
frontend/src/lib/: contracts.ts  stellar.ts
scripts/: deploy.js
src/components/: .Navbar.tsx.swo  ListingModal.tsx  Toast.tsx
src/hooks/: useFreighter.ts  useWallet.ts
